--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-gopass-summon-provider
+gopass-summon-provider*
 dist/
 
