--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build gopass
+name: Build gopass-summon-provider
 
 on:
   push:
@@ -38,27 +38,3 @@ jobs:
       
     - name: Build and Unit Test
       run: make travis
-
-  macos:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
-
-    - name: MacOS Dependencies
-      run: brew install git gnupg
-
-    - run: git config --global user.name nobody
-    - run: git config --global user.email foo.bar@example.org
-      
-    - name: Build and Unit Test
-      run: make travis
-      env:
-        SLOW_TEST_FACTOR: 100 
-
